# visualize3D

./: CMakeLists.txt  README.md  Utils.cpp  Utils.h  main.cpp
build-debug/: CMakeCache.txt  Makefile  cmake_install.cmake  main.cbp
build-debug/main.app/Contents/MacOS/: main
data/: contour_crop_ETP.ply  contour_crop_poisson_ETP.ply
